# 2dgstri

./: Untitled.ipynb  exp1.txt  mesh.ply  render.py  train.py  web.txt
arguments/: __init__.py
gaussian_renderer/: __init__.py
output/date/scan63_1/: cameras.json  cfg_args  events.out.tfevents.1721635176.featurize.32646.0  events.out.tfevents.1721636503.featurize.32812.0  events.out.tfevents.1721636908.featurize.32877.0  events.out.tfevents.1721637377.featurize.32929.0  events.out.tfevents.1721637508.featurize.32992.0  events.out.tfevents.1721637553.featurize.33040.0  events.out.tfevents.1721637615.featurize.33103.0  events.out.tfevents.1721638281.featurize.33163.0  events.out.tfevents.1721638483.featurize.33253.0  events.out.tfevents.1721638694.featurize.33304.0  events.out.tfevents.1721639906.featurize.33654.0  events.out.tfevents.1721640090.featurize.33743.0  events.out.tfevents.1721640676.featurize.33796.0  events.out.tfevents.1721640716.featurize.33857.0  (+59 more)
scene/: __init__.py  dataset_readers.py  gaussian_model.py  triangles.py
submodules/diff-surfel-rasterization/: CMakeLists.txt  rasterize_points.cu  rasterize_points.h  setup.py
submodules/diff-surfel-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
submodules/diff-surfel-rasterization/diff_surfel_rasterization/: Untitled.ipynb
submodules/diff-surfel-rasterization/diff_surfel_rasterization.egg-info/: SOURCES.txt
submodules/diff-surfel-rasterization/spam.egg-info/: PKG-INFO
utils/: mesh_utils.py
(+483 files in other folders)
